--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = 'http://rava-dosa.github.io/arm/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'archie'
+publishDir = 'docs'
